--- a/lib/l10n/intl_zh.arb
+++ b/lib/l10n/intl_zh.arb
@@ -1,6 +1,10 @@
 {
-  "login_signIn": "登录",
-  "login_ForgetPsw": "忘记密码?",
-  "login_signUp": "注册"
+  "common_Password": "密码",
+  "common_Username": "用户名",
 
+  "login_Welcome": "欢迎",
+  "login_Desc": "Wallet 描述",
+  "login_SignIn": "登录",
+  "login_ForgotPsw": "忘记密码?",
+  "login_SignUp": "注册"
 }
