--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -2,11 +2,26 @@
 
   "common_Password": "Password",
   "common_Username": "Username",
+  "common_Email": "Email",
+  "common_VerifyCode": "Verify Code",
+  "common_CodeLeve1": "Weak",
+  "common_CodeLeve2": "Normal",
+  "common_CodeLeve3": "Strong",
+  "common_GetCode": "Get Code",
+  "common_NewPsw": "New Password",
+  "common_ConfirmNewPsw": "Confirm New Password",
+  "common_Back": "Back",
+  "common_Done": "Done",
+  "common_Wrong": "Wrong ",
 
   "login_Welcome": "Welcome",
   "login_Desc": "Wallet Description",
   "login_SignIn": "Sign In",
   "login_ForgotPsw": "Forgot Password?",
-  "login_SignUp": "Sign Up"
+  "login_SignUp": "Sign Up",
 
+  "forgetPsw_Title": "Forgot Password",
+
+
+  "tips_WrongEmail":"Wrong email"
 }
