--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -1,5 +1,4 @@
 {
-
   "common_Password": "Password",
   "common_Username": "Username",
   "common_Email": "Email",
@@ -19,9 +18,48 @@
   "login_SignIn": "Sign In",
   "login_ForgotPsw": "Forgot Password?",
   "login_SignUp": "Sign Up",
-
   "forgetPsw_Title": "Forgot Password",
 
-
-  "tips_WrongEmail":"Wrong email"
+  "tips_WrongEmail": "Wrong email",
+  "tips_comeSoon": "Coming Soon...",
+  "tips_emptyAddress": "The address cannot be empty.",
+  "tips_invalidAddress": "Invalid address.",
+  "tips_emptyAmount": "The amount cannot be empty.",
+  "tips_zeroAmount": "The amount must be greater than 0.",
+  "tips_maxAmount": "The amount cannot exceed the maximum.",
+  "tips_emptyAmount1": "The from amount cannot be empty.",
+  "tips_zeroAmount1": "The from amount must be greater than 0.",
+  "tips_maxAmount1": "The from amount cannot exceed the maximum.",
+  "tips_emptyAmount2": "The to amount cannot be empty.",
+  "tips_zeroAmount2": "The to amount must be greater than 0.",
+  "tips_createEthAddress": "Please create an ethereum address.",
+  "tips_waitingBalance": "Please wait for a while to see the balance.",
+  "tips_addressIsOnClipboard": "Address is on your clipboard.",
+  "tips_cardNoIsOnClipboard": "Card NO is on your clipboard.",
+  "tips_wifIsOnClipboard": "WIF is on your clipboard.",
+  "tips_emptyWif": "Empty WIF.",
+  "tips_emptyPassword": "The password cannot be empty.",
+  "tips_waiting": "Please wait.",
+  "tips_getVerifyCode": "Please get verification code first.",
+  "tips_wrongPass": "Please enter the correct password.",
+  "tips_wrongPassMatch": "Wrong password and confirmation password.",
+  "tips_updatedPassword": "Password updated.",
+  "tips_selectDateOfBirth": "Please select the date of birth.",
+  "tips_selectCountry": "Please select the country.",
+  "tips_kycNeed": "You need KYC first.",
+  "tips_kycPending": "KYC is pending.",
+  "tips_kycPassed": "KYC has been passed and please check the card page after a while.",
+  "tips_kycRejected": "KYC is rejected and please do it again.",
+  "tips_checkInputSocialId": "Please input the social Id.",
+  "tips_emptyCardNumber": "The card number cannot be empty.",
+  "tips_applyCardFirst": "Please apply for a new card first.",
+  "tips_waitForReview": "Please wait for manual review.",
+  "tips_successWithdraw": "Withdraw successful.",
+  "tips_failWithdraw": "Withdraw failed, please try again later.",
+  "tips_successDeposit": "Deposit successful.",
+  "tips_failDeposit": "Deposit failed, please try again later.",
+  "tips_buyNftSuccess": "Buy NFT Successfully.",
+  "tips_createWallet": "Please create a crypto wallet first.",
+  "tips_needFiveDollarFee": "There is a fee of $5.00 to apply for a virtual card.",
+  "tips_codeIsOnClipboard": "Invitation Code is on your clipboard."
 }
