--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -11,8 +11,14 @@
   "common_ConfirmNewPsw": "Confirm New Password",
   "common_Back": "Back",
   "common_Next": "NEXT",
+  "common_Cancel": "CANCEL",
   "common_Done": "Done",
   "common_Wrong": "Wrong ",
+  "common_NoData": "No Data",
+  "common_Deposit": "Deposit",
+  "common_Withdraw": "Withdraw",
+  "common_Exchange": "Exchange",
+
 
   "login_Welcome": "Welcome",
   "login_Desc": "Wallet Description",
@@ -29,12 +35,35 @@
   "applyCard_VirtualCard": "Virtual Card",
   "applyCard_Desc1": "Our new virtual card allows you to：",
   "applyCard_Desc2": "- Pay conveniently for online transactions \n- Exchange Currencies & Crypto \n- Send & Receive",
+  "applyCard_Desc3": "*** There is a fee of ${createFee} to apply for a virtual card.",
   "applyCard_ApplyLater": "APPLY LATER",
+  "applyCard_ApplyCard": "APPLY Card",
 
   "main_home_Card": "Card",
   "main_home_Crypto": "Crypto",
   "main_home_Shop": "Shop",
   "main_home_Profile": "Profile",
+
+  "card_home_title": "Home",
+  "card_home_Account": "Account",
+  "card_home_Card": "Card",
+  "card_RecentTransactions": "Recent Transactions",
+  "card_account_Exchange": "Exchange",
+  "card_account_Account": "Account",
+  "card_card_Payment": "Payment",
+  "card_card_Account": "Account",
+  "card_card_Pay": "Pay",
+  "card_card_Deposit": "Deposit",
+  "card_card_Withdraw": "Withdraw",
+
+  "recharge_Title1": "Deposit to Account",
+  "recharge_Title2": "Withdraw to Account",
+  "recharge_Amount": "Amount",
+  "recharge_CardNumber": "Card Number",
+  "recharge_AccountBalance": "Account Balance",
+  "recharge_CardBalance": "Card Balance",
+
+  "cardRecharge_title1": "Pay For NFT",
 
   "tips_WrongEmail": "Wrong email",
   "tips_comeSoon": "Coming Soon...",
