--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -68,6 +68,7 @@
 
   "profile_title_RewardFrom": "Reward From",
   "profile_reward_subTitle1": "Total Reward:{totalReward} from {totalUser} Users",
+  "profile_guide_title": "Guide",
   "profile_guide_desc1": "profile_guide_desc1profile_guide_desc1profile_guide_desc1profile_guide_desc1profile_guide_desc1profile_guide_desc1",
   "profile_guide_desc2": "profile_guide_desc2",
   "profile_guide_desc3": "profile_guide_desc3",
