i18n cards and remove unused code

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -13,6 +13,7 @@
   "common_Next": "NEXT",
   "common_Cancel": "CANCEL",
   "common_Done": "Done",
+  "common_Confirm": "confirm",
   "common_Wrong": "Wrong ",
   "common_NoData": "No Data",
   "common_Deposit": "Deposit",
@@ -38,6 +39,44 @@
   "applyCard_Desc3": "*** There is a fee of ${createFee} to apply for a virtual card.",
   "applyCard_ApplyLater": "APPLY LATER",
   "applyCard_ApplyCard": "Apply Card",
+
+  "cardActivity_tile": "Card Activity",
+  "exchange_tile": "Exchange",
+  "exchange_To": "To",
+  "exchange_wait": "Wait a while...",
+  "exchange_ReceiveAtLeast": "Receive at least",
+  "exchange_InputTips1": "Just need to input in From, minimum \\$10 or 0.01 ETH. There will be a 6.5% fee for exchanging USD into crypto assets, and a 2% fee for exchanging crypto assets into USD.",
+  "exchange_Balance": "Balance: ",
+  "exchange_Max": "Max",
+  "exchange_notEnoughBalance": "Your account balance is insufficient, please deposit.",
+  "exchange_Deposit": "Deposit",
+  "exchange_Step": "Step {step}",
+
+  "reReviewExchange_title": "Review Exchange",
+  "reReviewExchange_YouWillSwap": "You will swap",
+  "reReviewExchange_Slippage": "Slippage",
+
+  "kyc_title": "Kyc",
+  "kyc_dateOfBirth": "Date of birth",
+  "kyc_tips1": "Please input English and Number.",
+  "kyc_IdentityId": "Identity Id",
+  "kyc_FirstName": "First Name",
+  "kyc_LastName": "Last Name",
+  "kyc_MobileNumber": "Mobile Number",
+  "kyc_AddressLine": "Address Line",
+  "kyc_AddressLine2": "Address Line 2(Optional)",
+  "kyc_StateRegion": "State/Region",
+  "kyc_City": "City",
+  "kyc_PostalZipCode": "Postal/Zip Code",
+
+  "selectCard_title": "Pick up favorite card",
+
+  "send_title1": "Withdraw to Card",
+  "send_title2": "Deposit to Card",
+  "send_Withdraw": "withdraw",
+  "send_Deposit": "deposit",
+  "send_tips": "*** The virtual card withdrawal limit is \\$50,000 per month.",
+  "send_AccountBalance": "Account Balance",
 
   "main_home_Card": "Card",
   "main_home_Crypto": "Crypto",
