--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -178,11 +178,11 @@
   "profile_title_RewardFrom": "Reward From",
   "profile_reward_subTitle1": "Total Reward:{totalReward} from {totalUser} Users",
   "profile_guide_title": "Guide",
-  "profile_guide_desc1": "profile_guide_desc1",
-  "profile_guide_desc2": "profile_guide_desc2",
-  "profile_guide_desc3": "profile_guide_desc3",
-  "profile_guide_desc4": "profile_guide_desc4",
-  "profile_guide_desc5": "profile_guide_desc5",
+  "profile_guide_desc1": "Deposit via credit card and get USDT.",
+  "profile_guide_desc2": "Check the balance of USDT.",
+  "profile_guide_desc3": "Exchange USDT to USD.",
+  "profile_guide_desc4": "USD can withdraw to virtual card.",
+  "profile_guide_desc5": "Check your virtual card.",
 
   "tips_WrongEmail": "Wrong email",
   "tips_WrongTxid": "Wrong txid",
