Updated the tip content

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -228,6 +228,6 @@
   "tips_failDeposit": "Deposit failed, please try again later.",
   "tips_buyNftSuccess": "Buy NFT Successfully.",
   "tips_createWallet": "Please create a crypto wallet first.",
-  "tips_needFiveDollarFee": "There is a fee of ${createCardFee} to apply for a virtual card.",
+  "tips_needFiveDollarFee": "There is a fee of ${createCardFee} to apply for a virtual card. \n The USD is insufficient, please click Deposit on the Home page to purchase USDT and then exchange it for USD.",
   "tips_codeIsOnClipboard": "Invitation Code is on your clipboard."
 }
