Added the traditional Chinese

--- a/lib/l10n/intl_tc.arb
+++ b/lib/l10n/intl_tc.arb
@@ -1,1 +1,237 @@
-{}
+{
+  "common_Password": "密碼",
+  "common_Username": "用戶名",  
+  "common_Email": "電子郵件",
+  "common_VerifyCode": "驗證碼",
+  "common_CodeLeve1": "弱",
+  "common_CodeLeve2": "普通",
+  "common_CodeLeve3": "強",
+  "common_GetCode": "獲取驗證碼",
+  "common_NewPsw": "新密碼",
+  "common_ConfirmNewPsw": "確認新密碼",
+  "common_Back": "返回",
+  "common_Next": "下一步",
+  "common_Cancel": "取消",
+  "common_Done": "完成",
+  "common_Ok": "確定",
+  "common_Confirm": "確認", 
+  "common_Wrong": "錯誤",
+  "common_NoData": "無數據",
+  "common_Deposit": "存款",
+  "common_Withdraw": "提款",
+  "common_Exchange": "兌換",
+
+  
+  "login_Welcome": "歡迎",
+  "login_Desc": "錢包描述",  
+  "login_SignIn": "登錄",
+  "login_ForgotPsw": "忘記密碼?",
+  "login_SignUp": "註冊",
+  "forgetPsw_Title": "忘記密碼",
+  
+  "signUp_Title": "註冊",
+  "signUp_Nickname": "暱稱",
+  "signUp_InvitationCode": "邀請碼",
+
+  "applyCard_Title": "申請卡片",
+  "applyCard_VirtualCard": "虛擬卡片",
+  "applyCard_Desc1": "我們的新虛擬卡片允許您:",
+  "applyCard_Desc2": "- 方便線上交易支付 \n- 兌換貨幣和加密貨幣 \n- 發送和接收",
+  "applyCard_Desc3": "*** 申請虛擬卡片需要支付 {createFee} 美元的費用。",
+  "applyCard_ApplyLater": "稍後申請",
+  "applyCard_ApplyCard": "申請卡片",
+
+  "cardActivity_tile": "卡活動",
+  "exchange_tile": "兌換",
+  "exchange_To": "兌換至",
+  "exchange_wait": "請稍等...",
+  "exchange_ReceiveAtLeast": "至少接收",  
+  "exchange_InputTips1": "请在From栏輸入最小10美元或0.01 ETH。從美元兌換加密資產將收取 6.5% 的費用,從加密資產兌換美元將收取 2% 的費用。",
+  "exchange_Balance": "餘額: ",
+  "exchange_Max": "最大值", 
+  "exchange_notEnoughBalance": "您的帳戶餘額不足,請充值。",
+  "exchange_Deposit": "存款",
+  "exchange_Step": "第 {step} 步",
+
+  "reviewExchange_title": "兌換詳情",
+  "reviewExchange_YouWillSwap": "您將兌換",
+  "reviewExchange_Slippage": "滑點",
+  "reviewExchange_Fee": "費用 {fee}",
+  "reviewExchange_cost": "網路成本 {cost}",
+
+  "tokenActivity_title": "{tokenName} 活動",
+  "tokenActivity_Pay": "支付",
+  "tokenActivity_Exchange": "兌換",
+  "tokenActivity_Receive": "接收",
+  "tokenActivity_Send": "發送",
+
+  "txHistory_title": "加密貨幣",
+  "txHistory_Exchange": "兌換",
+  "txHistory_Send": "轉账",
+
+  "kyc_title": "認證",
+  "kyc_dateOfBirth": "出生日期",
+  "kyc_tips1": "請輸入英文和數字。",
+  "kyc_IdentityId": "身分證號",
+  "kyc_FirstName": "名字",
+  "kyc_LastName": "姓氏",
+  "kyc_MobileNumber": "手機號碼", 
+  "kyc_AddressLine": "地址",
+  "kyc_AddressLine2": "地址第二行(可選)",
+  "kyc_StateRegion": "州/地區",
+  "kyc_City": "城市",
+  "kyc_PostalZipCode": "郵遞區號",
+
+  "selectCard_title": "選擇喜愛的卡片",
+
+  "send_title1": "提款到卡片",
+  "send_title2": "充值到卡片",
+  "send_Withdraw": "提款",
+  "send_Deposit": "充值",
+  "send_tips": "*** 虛擬卡每月提款限額為 50,000 美元。",
+  "send_AccountBalance": "賬戶餘額",
+
+  "main_home_Card": "卡片",
+  "main_home_Crypto": "加密貨幣",
+  "main_home_Shop": "商店",
+  "main_home_Profile": "個人資料",
+
+  "card_home_title": "首頁",
+  "card_home_Account": "賬戶",
+  "card_home_Card": "卡片",  
+  "card_RecentTransactions": "最近交易",
+  "card_account_Exchange": "兌換",
+  "card_account_Account": "賬戶",
+  "card_card_Payment": "支付",
+  "card_card_Account": "賬戶",
+  "card_card_Pay": "支付",
+  "card_card_Deposit": "存款",
+  "card_card_Withdraw": "提款",
+  
+  "recharge_Title1": "充值到賬戶",
+  "recharge_Title2": "提款到賬戶",
+  "recharge_Amount": "金額",
+  "recharge_CardNumber": "卡號",
+  "recharge_AccountBalance": "賬戶餘額",
+  "recharge_CardBalance": "卡片餘額",
+
+  "cardRecharge_title": "支付NFT",
+  "ethereumPage_Tokens": "代幣",
+  "ethereumPage_NFTs": "NFT",
+  "ethereumPage_Pay": "支付",
+  "ethereumPage_Exchange": "兌換", 
+  "ethereumPage_Receive": "接收",
+  "ethereumPage_Send": "發送",  
+  "ethereumPage_CreateNewWallet": "創建新錢包",
+  "ethereumPage_RecoverWallet": "恢復錢包",
+
+  "ethereumRecoverWallet_title": "導入 WIF",
+  "ethereumRecoverWallet_WIF": "WIF",
+
+  "exportWif_title": "導出 WIF",
+  "exportWif_Copy": "複製",
+
+  "nftExchange_title": "NFT 兌換",
+  "nftExchange_From": "從",
+  "nftExchange_To": "至",
+  "nftExchange_nftBalance": "餘額: {amount} NFT",
+
+  "receiveWallet_WalletAddress": "錢包地址",
+  "receiveWallet_LightningInvoice": "閃電網路發票",
+
+  "crypto_send_title": "發送",
+  "crypto_send_AssetAmount": "資產和數量",
+  "crypto_send_Balance": "餘額: ",
+  "crypto_send_Memo": "備註", 
+  "crypto_send_MinerFee": "礦工費: ",
+  "crypto_send_EstimatedRange": "預估範圍",
+  "crypto_send_RefreshIn5s": "5秒后刷新",
+  "crypto_send_Standard": "標準",
+  "crypto_send_Expiration": "到期: ",
+
+  "crypto_sendConfirm_title": "標準",
+  "crypto_sendConfirm_PaymentDetails": "付款詳情",
+  "crypto_sendConfirm_Memo": "備註: ",
+  "crypto_sendConfirm_From": "從: ",
+  "crypto_sendConfirm_To": "至: ",
+
+  "shop_title": "商店",
+  "shop_tips": "您已選擇 {nftTotalCount} 個 NFT,總值 {nftTotalValue} 美元",
+  "shop_BuyNFT": "購買 NFT",
+  "shop_nft_title": "NFT",
+  "shop_nft_currPrice": "當前價格", 
+  "shop_nft_Description": "描述",
+  "shop_nft_ContractAddress": "合約地址",
+  "shop_nft_TokenID": "代幣ID",
+  "shop_nft_TokenStandard": "代幣標準",
+  "shop_nft_Chain": "鏈",
+  "shop_nft_tx_history_title": "NFT交易歷史",
+
+  "profile_home_InvitationCode": "我的邀請碼",
+  "profile_home_MyUsers": "我的用戶",
+  "profile_home_MyReward": "我的獎勵",
+  "profile_home_UpdatePassword": "更新密碼",
+  "profile_home_Logout": "登出",
+  "profile_MyUsers_totalUsers": "用戶總數: ",
+  "profile_UpdatePsw_totalUsers": "用戶總數: ",
+  "profile_UpdatePassword_OldPassword": "舊密碼",
+  "profile_MyReward_totalReward": "獎勵總數: ",
+
+  "profile_language_title": "語言",
+  
+  "profile_title_RewardFrom": "來自獎勵",
+  "profile_reward_subTitle1": "獎勵總數: {totalReward} 來自 {totalUser} 用戶",
+  "profile_guide_title": "指南",
+  "profile_guide_desc1": "通過信用卡充值並獲得 USDT。",
+  "profile_guide_desc2": "查看 USDT 餘額。",
+  "profile_guide_desc3": "將 USDT 兌換為 USD。",
+  "profile_guide_desc4": "USD 可以提款到虛擬卡。",
+  "profile_guide_desc5": "檢查您的虛擬卡。",
+  
+  "tips_WrongEmail": "錯誤的郵件",
+  "tips_WrongTxid": "錯誤的交易 ID",
+  "tips_WrongTopUp": "充值到錢包地址",
+  "tips_comeSoon": "即將推出......",
+  "tips_emptyAddress": "地址不能為空。",
+  "tips_invalidAddress": "無效地址。",
+  "tips_emptyAmount": "金額不能為空。",
+  "tips_zeroAmount": "金額必須大於 0。",
+  "tips_maxAmount": "金額不能超過最大值。",
+  "tips_emptyAmount1": "從金額不能為空。",
+  "tips_zeroAmount1": "從金額必須大於 0。",
+  "tips_maxAmount1": "從金額不能超過最大值。", 
+  "tips_emptyAmount2": "至金額不能為空。",
+  "tips_zeroAmount2": "至金額必須大於 0。",
+  "tips_createEthAddress": "請創建一個以太坊地址。",
+  "tips_waitingBalance": "請稍等一會兒查看餘額。",
+  "tips_addressIsOnClipboard": "地址已複製到剪貼板。",  
+  "tips_cardNoIsOnClipboard": "卡號已複製到剪貼板。",
+  "tips_wifIsOnClipboard": "WIF 已複製到剪貼板。",
+  "tips_emptyWif": "空白 WIF。",
+  "tips_emptyPassword": "密碼不能為空。",
+  "tips_waiting": "請稍等。",
+  "tips_getVerifyCode": "請先獲取驗證碼。",
+  "tips_wrongPass": "請輸入正確的密碼。",
+  "tips_wrongPassMatch": "密碼和確認密碼不匹配。",
+  "tips_updatedPassword": "密碼已更新。",
+  "tips_selectDateOfBirth": "請選擇出生日期。",
+  "tips_selectCountry": "請選擇國家。", 
+  "tips_kycNeed": "您需要先通過認證。",
+  "tips_kycPending": "認證正在處理中。",
+  "tips_kycPassed": "認證已通過,請稍後在卡片頁面查看。",
+  "tips_kycRejected": "認證被拒絕,請重新提交。",
+  "tips_checkInputSocialId": "請輸入身分證號。",
+  "tips_emptyCardNumber": "卡號不能為空。",
+  "tips_applyCardFirst": "請先申請新卡。",
+  "tips_waitForReview": "請等待人工審核。",
+  "tips_successWithdraw": "提款成功。",
+  "tips_failWithdraw": "提款失敗,請稍後重試。",
+  "tips_successDeposit": "充值成功。",
+  "tips_failDeposit": "充值失敗,請稍後重試。",
+  "tips_buyNftSuccess": "購買NFT成功。",
+  "tips_createWallet": "請先創建加密貨幣錢包。",
+  "tips_needFiveDollarFee": "申請虛擬卡需要支付 {createCardFee} 美元的費用。\n美元不足,請點擊首頁的存款購買 USDT,然後兌換為美元。",
+  "tips_codeIsOnClipboard": "邀請碼已複製到剪貼板。",
+  "tips_sendTokenError": "請存入足夠的 ETH 作為手續費。",
+  "tips_WithdrawResult": "將獲得 {amount},手續費為 {fee}"
+}
