--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -190,8 +190,24 @@
   "profile_guide_desc5": "Check your virtual card.",
 
   "realCard_title": "RealCard",
+  "realCard_status1": "待审核",
+  "realCard_status2": "审核通过",
+  "realCard_status3": "申请失败",
   "realCard_name": "Name",
   "realCard_idCardNum": "ID Card Num",
+  "realCard_firstName": "姓氏拼音",
+  "realCard_lastName": "名字拼音",
+  "realCard_chinaIdCard": "中国大陆身份证",
+  "realCard_otherIdCard": "港澳台及境外护照",
+  "realCard_gender_male": "男",
+  "realCard_gender_female": "女",
+  "realCard_marry_no": "未婚",
+  "realCard_marry_yes": "已婚",
+  "realCard_shipRegion_china": "中国大陆",
+  "realCard_shipRegion_hongKong": "中国香港",
+  "realCard_shipAddress_home": "家庭地址",
+  "realCard_shipAddress_company": "公司地址",
+  "realCard_tips_uploadImage": "上传正确的图片",
 
   "realCard_Step2_title": "卡片寄送地址",
   "realCard_Step2_phone": "手机号",
