Translate the tips text and update the profile page

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -189,34 +189,34 @@
   "profile_guide_desc4": "USD can withdraw to virtual card.",
   "profile_guide_desc5": "Check your virtual card.",
 
-  "realCard_title": "RealCard",
-  "realCard_status1": "待审核",
-  "realCard_status2": "审核通过",
-  "realCard_status3": "申请失败",
+  "realCard_title": "Apply Real Card",
+  "realCard_status1": "Pending",  
+  "realCard_status2": "Approved",
+  "realCard_status3": "Application Failed",
   "realCard_name": "Name",
-  "realCard_idCardNum": "ID Card Num",
-  "realCard_firstName": "姓氏拼音",
-  "realCard_lastName": "名字拼音",
-  "realCard_chinaIdCard": "中国大陆身份证",
-  "realCard_otherIdCard": "港澳台及境外护照",
-  "realCard_gender_male": "男",
-  "realCard_gender_female": "女",
-  "realCard_marry_no": "未婚",
-  "realCard_marry_yes": "已婚",
-  "realCard_shipRegion_china": "中国大陆",
-  "realCard_shipRegion_hongKong": "中国香港",
-  "realCard_shipAddress_home": "家庭地址",
-  "realCard_shipAddress_company": "公司地址",
-  "realCard_tips_uploadImage": "上传正确的图片",
+  "realCard_idCardNum": "ID Card Number", 
+  "realCard_firstName": "First Name (Pinyin)",
+  "realCard_lastName": "Last Name (Pinyin)",
+  "realCard_chinaIdCard": "Mainland China ID Card",
+  "realCard_otherIdCard": "Hong Kong, Macau, Taiwan or Foreign Passport",
+  "realCard_gender_male": "Male", 
+  "realCard_gender_female": "Female",
+  "realCard_marry_no": "Unmarried",
+  "realCard_marry_yes": "Married",  
+  "realCard_shipRegion_china": "Mainland China",
+  "realCard_shipRegion_hongKong": "Hong Kong, China",  
+  "realCard_shipAddress_home": "Home Address",
+  "realCard_shipAddress_company": "Company Address",
+  "realCard_tips_uploadImage": "Please upload correct image",
 
-  "realCard_Step2_title": "卡片寄送地址",
-  "realCard_Step2_phone": "手机号",
-  "realCard_Step2_city": "收件城市",
-  "realCard_Step2_cityCode": "城市邮编",
-  "realCard_Step2_address": "详细地址",
+  "realCard_Step2_title": "Card Shipping Address",  
+  "realCard_Step2_phone": "Phone Number",
+  "realCard_Step2_city": "Recipient City",  
+  "realCard_Step2_cityCode": "City Zip Code",
+  "realCard_Step2_address": "Detailed Address",   
 
-  "realCard_Step3_title": "账单寄送地址",
-  "realCard_Step3_note": "请填写非中国大陆地区的英文地址",
+  "realCard_Step3_title": "Billing Address", 
+  "realCard_Step3_note": "Please fill in non-Mainland China English address",
 
   "tips_WrongEmail": "Wrong email",
   "tips_WrongTxid": "Wrong txid",
