--- a/lib/l10n/intl_zh_TW.arb
+++ b/lib/l10n/intl_zh_TW.arb
@@ -189,34 +189,34 @@
   "profile_guide_desc4": "USD 可以提款到虛擬卡。",
   "profile_guide_desc5": "檢查您的虛擬卡。",
 
-  "realCard_title": "实体卡",
-  "realCard_status1": "待审核",
-  "realCard_status2": "审核通过",
-  "realCard_status3": "申请失败",
+  "realCard_title": "申請實體卡",
+  "realCard_status1": "覆核中", 
+  "realCard_status2": "覆核通過",
+  "realCard_status3": "申請失敗",
   "realCard_name": "姓名",
-  "realCard_idCardNum": "身份证号",
+  "realCard_idCardNum": "身份證號",  
   "realCard_firstName": "姓氏拼音",
   "realCard_lastName": "名字拼音",
-  "realCard_chinaIdCard": "中国大陆身份证",
-  "realCard_otherIdCard": "港澳台及境外护照",
-  "realCard_gender_male": "男",
-  "realCard_gender_female": "女",
-  "realCard_marry_no": "未婚",
-  "realCard_marry_yes": "已婚",
-  "realCard_shipRegion_china": "中国大陆",
-  "realCard_shipRegion_hongKong": "中国香港",
+  "realCard_chinaIdCard": "中國大陸身份證", 
+  "realCard_otherIdCard": "香港、澳門、台灣或外國護照", 
+  "realCard_gender_male": "男",  
+  "realCard_gender_female": "女", 
+  "realCard_marry_no": "未婚", 
+  "realCard_marry_yes": "已婚",    
+  "realCard_shipRegion_china": "中國大陸", 
+  "realCard_shipRegion_hongKong": "中國香港",   
   "realCard_shipAddress_home": "家庭地址",
-  "realCard_shipAddress_company": "公司地址",
-  "realCard_tips_uploadImage": "上传正确的图片",
+  "realCard_shipAddress_company": "公司地址",  
+  "realCard_tips_uploadImage": "請上傳正確的圖片",  
 
-  "realCard_Step2_title": "卡片寄送地址",
-  "realCard_Step2_phone": "手机号",
-  "realCard_Step2_city": "收件城市",
-  "realCard_Step2_cityCode": "城市邮编",
-  "realCard_Step2_address": "详细地址",
+  "realCard_Step2_title": "卡片寄送地址",     
+  "realCard_Step2_phone": "手機號", 
+  "realCard_Step2_city": "收件城市",   
+  "realCard_Step2_cityCode": "城市郵編",  
+  "realCard_Step2_address": "詳細地址",    
 
-  "realCard_Step3_title": "账单寄送地址",
-  "realCard_Step3_note": "请填写非中国大陆地区的英文地址",
+  "realCard_Step3_title": "帳單寄送地址",  
+  "realCard_Step3_note": "請填寫非中國大陸地區的英文地址",
 
   "tips_WrongEmail": "錯誤的郵件",
   "tips_WrongTxid": "錯誤的交易 ID",
