Translate the text

--- a/lib/l10n/intl_zh_TW.arb
+++ b/lib/l10n/intl_zh_TW.arb
@@ -218,9 +218,9 @@
   "realCard_Step3_title": "帳單寄送地址",  
   "realCard_Step3_note": "請填寫非中國大陸地區的英文地址",
 
-  "alert_title": "Message",
-  "alert_ok": "OK",
-  "alert_cancel": "Cancel",
+  "alert_title": "消息",
+  "alert_ok": "確定", 
+  "alert_cancel": "取消",
 
   "tips_WrongEmail": "錯誤的郵件",
   "tips_WrongTxid": "錯誤的交易 ID",
