--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -190,7 +190,8 @@
   "profile_guide_desc5": "Check your virtual card.",
 
   "realCard_title": "Apply Real Card",
-  "realCard_status1": "Pending",  
+  "realCard_fee": "There is a ${fee} fee to apply real card. Please top up first.",
+  "realCard_status1": "Pending",
   "realCard_status2": "Approved",
   "realCard_status3": "Application Failed",
   "realCard_name": "Name",
