--- a/lib/l10n/intl_zh_TW.arb
+++ b/lib/l10n/intl_zh_TW.arb
@@ -98,7 +98,7 @@
 
   "card_home_title": "首頁",
   "card_home_Account": "賬戶",
-  "card_home_Card": "卡片",
+  "card_home_Card": "虛擬卡",
   "card_RecentTransactions": "最近交易",
   "card_account_Exchange": "兌換",
   "card_account_Account": "賬戶",
@@ -190,6 +190,7 @@
   "profile_guide_desc5": "檢查您的虛擬卡。",
 
   "realCard_title": "申請實體卡",
+  "realCard_card_title": "實體卡",
   "realCard_fee": "申請實體卡有{fee}元的費用，請先充值。",
   "realCard_status1": "覆核中", 
   "realCard_status2": "覆核通過",
